# Cogniton

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: conf.py
examples/: example_basic_lif.py  example_network_simulation.py  example_reservoir_computing.py  example_stdp_learning.py
src/cogniton/: __init__.py
src/cogniton/core/: __init__.py  config.py  event.py  time.py
src/cogniton/hardware/: __init__.py  backends.py
src/cogniton/network/: __init__.py  network.py
src/cogniton/neurons/: __init__.py  hh.py  lif.py
src/cogniton/reservoir/: __init__.py  reservoir.py
src/cogniton/simulation/: __init__.py  runner.py
src/cogniton/synapses/: __init__.py  plasticity.py  synapse.py
src/cogniton/utils/: __init__.py  analysis.py  data.py  visualization.py
tests/: test_neurons.py
