[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogniton"
version = "1.0.0"
description = "Neuromorphic Computing Simulator - A comprehensive framework for spiking neural networks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cogniton Team", email = "team@cogniton.dev"}
]
keywords = [
    "neuromorphic",
    "spiking-neural-networks",
    "snn",
    "lif-neuron",
    "stdp",
    "reservoir-computing",
    "echo-state-network",
    "liquid-state-machine",
    "simulation",
    "brain-inspired",
    "intel-loihi",
    "ibm-truenorth"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Field of Interest :: neuroscience",
    "Field of Interest :: computational neuroscience"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
visualization = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
all = [
    "cogniton[dev,visualization]",
]

[project.urls]
Homepage = "https://github.com/moggan1337/Cogniton"
Documentation = "https://cogniton.readthedocs.io"
Repository = "https://github.com/moggan1337/Cogniton"
Issues = "https://github.com/moggan1337/Cogniton/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
